--- a/paper/figures/fig-europarl-pplx-ngram.tex
+++ b/paper/figures/fig-europarl-pplx-ngram.tex
@@ -625,7 +625,7 @@
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 87.76,131.73) {Language ($2$-gram pplx, $\infty$-gram pplx)};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 87.76,131.73) {Language ($2$-gram pplx $\infty$-gram pplx)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
@@ -739,54 +739,54 @@
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22,122.60) {BG ($2$-gram $117.39$, $\infty$-gram $73.01$)};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22,122.60) {BG \hspace{1mm}($2$-gram $117.39$ \hspace{2mm}$\infty$-gram $73.01$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22,115.49) {CZ ($2$-gram $232.36$, $\infty$-gram $161.15$)};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22,115.49) {CZ \hspace{1mm}($2$-gram $232.36$ \hspace{2.5mm}$\infty$-gram $161.15$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22,108.38) {DE ($2$-gram $178.11$, $\infty$-gram $108.27$)};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22,108.38) {DE \hspace{1mm}($2$-gram $178.11$ \hspace{2mm}$\infty$-gram $108.27$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22,101.26) {EN ($2$-gram $67.14$, $\infty$-gram $59.92$)};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22,101.26) {EN \hspace{1mm}($2$-gram $67.14$ \hspace{4mm}$\infty$-gram $59.92$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 94.15) {FI ($2$-gram $446.29$, $\infty 314.22$)};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 94.15) {FI \hspace{3mm}($2$-gram $446.29$ \hspace{2mm}$\infty$-gram $314.22$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 87.04) {FR ($2$-gram $89.95$, $\infty$-gram $47.91$)};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 87.04) {FR \hspace{2mm}($2$-gram $89.95$ \hspace{4mm}$\infty$-gram $47.91$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 79.92) {HU ($2$-gram $251.49$, $\infty$-gram $182.18$)};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 79.92) {HU \hspace{1mm}($2$-gram $251.49$ \hspace{2mm}$\infty$-gram $182.18$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 72.81) {IT ($2$-gram $132.26$, $\infty$-gram $77.80$)};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 72.81) {IT \hspace{2mm} ($2$-gram $132.26$ \hspace{2mm}$\infty$-gram $77.80$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 65.70) {PT ($2$-gram $121.42$, $\infty$-gram $68.58$)};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 65.70) {PT \hspace{2mm}($2$-gram $121.42$ \hspace{2mm}$\infty$-gram $68.58$)};
 \end{scope}
 \end{tikzpicture}
