--- a/paper/sec-intro.tex
+++ b/paper/sec-intro.tex
@@ -95,8 +95,7 @@ about $20\times$ the training corpus).
 %counts needed in other smoothing techniques as well [chen and goodman].} [kneser kney].  
  
 In contrast, we make use of recent advances in  \emph{compressed suffix trees} (\CSTs) \cite{rno-talg11} 
-to build compact indices with much more modest memory requirements (about
-$\frac{1}{2}$ the corpus size).
+to build compact indices with much more modest memory requirements ($\approx$ the size of the corpus).
 We present methods for extracting frequency and unique occurrence count
 statistics for \ngram queries from \CSTs,  and two algorithms for
 computing Kneser-Ney LM probabilities on the fly using these statistics.
@@ -110,7 +109,7 @@ number of unique contexts to both sides.
 % \ngram is more difficult to compute, as is the process of searching in both \CSTs,
 % resulting in slow runtime performance. 
 Our second method addresses this problem using a single \CST backed by
-a FM-index \cite{fmmn-talg07}, which results in a better time
+a wavelet tree based FM-index \cite{fmmn-talg07}, which results in a better time
 complexity of querying and a considerably faster runtime.
  
  % We further show how to leverage count queries for shorter contexts in queries for 
