fixes to bibliography

--- a/paper/local.bib
+++ b/paper/local.bib
@@ -79,8 +79,7 @@ pages = {1425-1428}
 @inproceedings{Chazelle:2004:BFE:982792.982797,
  author = {Chazelle, Bernard and Kilian, Joe and Rubinfeld, Ronitt and Tal, Ayellet},
  title = {The Bloomier Filter: An Efficient Data Structure for Static Support Lookup Tables},
- booktitle = {Proceedings of the Fifteenth Annual ACM-SIAM Symposium on Discrete Algorithms},
- series = soda,
+ booktitle = soda,
  year = {2004},
  pages = {30--39}
 } 
@@ -154,6 +153,7 @@ address = {New York, NY, USA}
 @techreport{bw-dec94,
   author = {M. Burrows and D. Wheeler},
   title = {A block sorting lossless data compression algorithm},
+	institution = {DEC},
   year = 1994,
   number = 124
 }
@@ -175,7 +175,7 @@ address = {New York, NY, USA}
   author = "P. Ferragina and G. Manzini and V. M{\"a}kinen and G. Navarro",
   journal = "ACM Trans. on Algorithms",
   year = 2007,
-  volulme = 3,
+  volume = 3,
   number = 2,
   pages = "article 20"
 }
