--- a/paper/sec-intro.tex
+++ b/paper/sec-intro.tex
@@ -126,7 +126,8 @@ unbounded `non-Markov' application, and enables training on large
 corpora as we demonstrate on the complete Wikipedia dump.
 % What's the raw text size before numberising Matthias?
 Overall this paper illustates the vast potential succinct indexes have for language modelling  and
-other `big data' problems in language processing.
+other `big data' problems in language processing such as machine translation 
+\cite{zhang_vogel_2005,DBLP:conf/acl/Callison-BurchBS05,lopez2008,DBLP:journals/tacl/HeLL15}.
 
 % with Kneser-Kney (KN) smoothing,  
 % a powerful technique with elegant statistical properties\footnote{Although
