make figures more pretty.

--- a/paper/figures/fig-wiki-breakdown.tex
+++ b/paper/figures/fig-wiki-breakdown.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.8.1 on 2015-05-30 20:10:24
+% Created by tikzDevice version 0.8.1 on 2015-05-31 14:35:40
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -420,7 +420,7 @@
 \path[] (206.10, 86.71) rectangle (216.81,141.69);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate=270.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.72] at (209.11,114.20) {dual-CST};
+\node[text=drawColor,rotate=270.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.72] at (209.11,114.20) {\dualCST};
 \end{scope}
 \begin{scope}
 \path[clip] (206.10, 23.29) rectangle (216.81, 78.28);
@@ -428,7 +428,7 @@
 \path[] (206.10, 23.29) rectangle (216.81, 78.28);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate=270.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.72] at (209.11, 50.78) {single-CST};
+\node[text=drawColor,rotate=270.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.72] at (209.11, 50.78) {\singleCST};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
