--- a/paper/sec-experiments.tex
+++ b/paper/sec-experiments.tex
@@ -83,7 +83,10 @@ the wavelet tree traversal used in \singleCST\ roughly reduces the running time
 by a factor of three. The complexity of \nlplusfrontbackname depends on the
 number of contexts, which is likely small for larger \ngrams, but can be large
 for small \ngrams, which suggest partial precomputation could significantly
-increase the query performance of our indexes.
+increase the query performance of our indexes. Exploring the myraid of
+different \CST and \CSA configurations available could also lead to 
+significant improvements in runtime and space usage also 
+remains future work.
 
 
 %and highlights the merits of our method both in construction and query time. In construction time, while both of our approaches are independent of the order of $m$gram, our fixed construction time outperforms both \SRILM methods in terms of memory for $m$grams of $5$ and higher orders. In terms of the timing, we outperform \SRILM compact after bigram, and \SRILM default for $m$grams of $3$ and higher orders. In query time, our memory footprint is constant and much lower that \SRILM compact, and default after $3$, and $2$ respectively. While in terms of timing, the single CST method is $300x$ slower compared to \SRILM for $2$-gram, this gap decreases to $12x$ for $10$-gram.  Another observation is the computational cost of computing $\nlplus{\Bigcdot \alpha \Bigcdot}$ when moving from $2$-gram, to $3$-gram which affects the timing. As mentioned earlier, this quantity is not required unless we move to $3$ or higher order $m$grams.
