minor changes and some questions re unclear bits

--- a/paper/sec-abstract.tex
+++ b/paper/sec-abstract.tex
@@ -8,7 +8,7 @@ We present algorithms for on-the-fly computation of probabilities under a
 Kneser-Ney language model.
 Our technique is \emph{exact} and although slower than leading LM
 toolkits, it shows promising scaling properties,
-which we demonstrate through $\infty$-order modelling over the full Wikipedia collection. 
+which we demonstrate \ehsan{Do we actually show this?} through $\infty$-order modelling over the full Wikipedia collection. 
 
 
 %%% Local Variables: 
