--- a/paper/sec-intro.tex
+++ b/paper/sec-intro.tex
@@ -96,7 +96,7 @@ about $20\times$ the training corpus).
  
 In contrast, we make use of recent advances in  \emph{compressed suffix trees} (\CSTs) \cite{rno-talg11} 
 to build compact indices with much more modest memory requirements ($\approx$ the size of the corpus).
-We present methods for extracting frequency and unique occurrence count
+We present methods for extracting frequency and unique occurrence count \ehsan{, based on unique contexts,}
 statistics for \ngram queries from \CSTs,  and two algorithms for
 computing Kneser-Ney LM probabilities on the fly using these statistics.
 The first method uses two \CSTs (over the corpus and the reversed corpus),
@@ -110,7 +110,7 @@ number of unique contexts to both sides.
 % resulting in slow runtime performance. 
 Our second method addresses this problem using a single \CST backed by
 a wavelet tree based FM-index \cite{fmmn-talg07}, which results in a better time
-complexity of querying and a considerably faster runtime.
+complexity of querying and a considerably faster runtime \ehsan{arent runtime and querying the same thing?}.
  
  % We further show how to leverage count queries for shorter contexts in queries for 
 % longer contexts to speed up the computation of KN-smoothed probabilities on the fly 
