fixed things and removed comments

--- a/paper/sec-intro.tex
+++ b/paper/sec-intro.tex
@@ -110,7 +110,7 @@ number of unique contexts to both sides.
 % resulting in slow runtime performance. 
 Our second method addresses this problem using a single \CST backed by
 a wavelet tree based FM-index \cite{fmmn-talg07}, which results in a better time
-complexity of querying and a considerably faster runtime \ehsan{arent runtime and querying the same thing?}.
+complexity of querying and a considerably faster runtime.
  
  % We further show how to leverage count queries for shorter contexts in queries for 
 % longer contexts to speed up the computation of KN-smoothed probabilities on the fly 
