making nlplusfrontback macro to take 5 arg

--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -53,7 +53,7 @@
 \newcommand{\nlplusfrontlname}{\textsc{N1pFront1}\xspace}
 \newcommand{\nlplusbacklfunc}[3]{\nlplusbacklname(#1, #2, #3)} % " ^ 2
 \newcommand{\nlplusfrontbackname}{\textsc{N1pFrontBack}\xspace}
-\newcommand{\nlplusfrontbackfunc}[4]{\nlplusfrontbackname(#1, #2, #3, #4)} % " 
+\newcommand{\nlplusfrontbackfunc}[5]{\nlplusfrontbackname(#1, #2, #3, #4, #5)} % " 
 \newcommand{\nlplusfrontbacklname}{\textsc{N1pFrontBack1}\xspace}
 \newcommand{\nlplusfrontbacklfunc}[3]{\nlplusfrontbacklname(#1, #2, #3)} % 
 
