changes all over the place

--- a/paper/supplementary.tex
+++ b/paper/supplementary.tex
@@ -216,7 +216,7 @@ French&FR&197.68&53.82&147058&1792\\
 Hungarian&HU&52.53&12.02&318882&527\\
 Italian&IT&186.67&48.08&178259&1703\\
 Portuguese&PT&187.20&49.03&183633&1737\\ \midrule
-Wikipedia && 8637 & 9057 & 196 & 87835 \\ 
+Wikipedia && 8637 & 9057 & 196M & 87835 \\ 
 \end{tabular}}
 \caption{Tokens and sentence counts refer to the training partition. }\label{fig:data}
 \end{table}
