Slight space cheat add dropped a sentence; now fits fine.

--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -4,6 +4,12 @@
 \input{packages.tex}
 \input{macros.tex}
 
+% some mild cheats
+\addtolength{\dbltextfloatsep}{-1ex}
+\addtolength{\dblfloatsep}{-1ex}
+\addtolength{\abovecaptionskip}{-1ex}
+\addtolength{\belowcaptionskip}{-1ex}
+
 \title{Compact, Efficient and Unlimited Capacity:
     Language Modelling with Compressed Suffix Trees}
 
