--- a/paper/supplementary.tex
+++ b/paper/supplementary.tex
@@ -205,7 +205,7 @@ $\intervalsymbols{a}{l}{r}$ & finds the set of symbols $P(\alpha)$ preceeding pa
 \begin{table}
 \centering{
 \begin{tabular}{ll|ccc|c}
-Language&&Size (MB)&Tokens (M)& Token Types& Sentences (K)\\
+Language&&Size (MiB)&Tokens (M)& Word Types& Sentences (K)\\
 \toprule
 Bulgarian&BG&36.11&8.53&114930&329\\
 Czech&CS&53.48&12.25&174592&535\\
@@ -218,7 +218,7 @@ Italian&IT&186.67&48.08&178259&1703\\
 Portuguese&PT&187.20&49.03&183633&1737\\ \midrule
 Wikipedia && 8637 & 9057 & 196M & 87835 \\ 
 \end{tabular}}
-\caption{Tokens and sentence counts refer to the training partition. }\label{fig:data}
+\caption{Dataset statistics, showing total uncompressed size; and tokens, types and sentence counts for the training partition. }\label{fig:data}
 \end{table}
 
 \iffalse
