fixed mistake in wavelet tree

--- a/paper/sec-suffix.tex
+++ b/paper/sec-suffix.tex
@@ -15,7 +15,7 @@
 \begin{subfigure}[t]{0.5\textwidth}
 \centering
 \input{figures/fig-wt-bwt.tex}
-\caption{Wavelet tree and \rankop$(\colbwt,17,'t')=5$.}
+\caption{Wavelet tree and \rankop$(\colbwt,17,\text{`t'})=5$.}
 \label{fig-wt-bwt}
 \end{subfigure}
 \begin{subfigure}[b]{1\textwidth}
