--- a/paper/sec-abstract.tex
+++ b/paper/sec-abstract.tex
@@ -1,6 +1,6 @@
 Efficient methods for storing and querying language models are critical for scaling to large corpora and high Markov orders.
 %While most previous work has focussed on efficient means of indexing \ngrams using a fixed, low Markov order,
-In this paper we propose methods for modelling extremely large corpora without
+In this paper we propose methods for modeling extremely large corpora without
 imposing a Markov condition.
 At its core, our approach uses a succinct index -- a \emph{compressed suffix tree} -- which provides near optimal compression while supporting efficient search.
 We present algorithms for on-the-fly computation of probabilities under a
